--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ gems:
   - jekyll-coffeescript
   - jekyll-paginate
 baseurl: "/jekyll32" # the subpath of your site, e.g. /blog
+description: "Miscellaneous nuggets of knowledge and interest."
