--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,4 @@ gems:
 baseurl: "/jekyll32" # the subpath of your site, e.g. /blog
 description: "Miscellaneous nuggets of knowledge and interest."
 title: "Bits of tedium"
+url: "https://strivingtolearn.github.io"
