--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,9 @@ gems:
   - jekyll-coffeescript
   - jekyll-paginate
 
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "post"
